--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Auto Filter Bot",
+    "name": "[RM] Auto Filter Bot",
     "description": "A Filter Bot Which Doesnt Need Manuall Filter Adding",
     "logo": "https://telegra.ph/file/667e15c821117633d07bd.png",
     "keywords": [
@@ -7,9 +7,9 @@
         "Filter",
         "Mongo DB"
     ],
-    "website": "https://github.com/AlbertEinsteinTG",
-    "repository": "https://github.com/AlbertEinsteinTG/Adv-Auto-Filter-Bot",
-    "success_url": "https://telegram.dog/CrazyBotsz",
+    "website": "https://github.com/REQUESTMOVIES-FAMILY",
+    "repository": "https://github.com/REQUESTMOVIES-FAMILY/Adv-Auto-Filter-Bot",
+    "success_url": "https://telegram.dog/RM_Linkz",
     "env": {
         "APP_ID": {
             "description": "Your APP ID From my.telegram.org or @UseTGXBot",
