--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "[RM] Auto Filter Bot",
     "description": "A Filter Bot Which Doesnt Need Manuall Filter Adding",
-    "logo": "https://telegra.ph/file/667e15c821117633d07bd.png",
+    "logo": "https://telegra.ph/file/12269d4e24275c9e4b0d5.jpg",
     "keywords": [
         "Auto",
         "Filter",
